@@ -1,2 +1,9 @@
 # Block-Puzzle_JavaFX
 A simple puzzle game, drag and drop the blocks to complete a vertical or horizontal line. Completing a line clears it to make space for other blocks. Place as many blocks as you can.
+
+## made by Michel Matthe 
+
+## REQUIREMENTS:
+- javaFx SDK
+- intellij: File > Project structure > Libraries > add <javafx sdk lib folder path>
+- VM options: --module-path "<javafx sdk lib folder path>" --add-modules javafx.controls,javafx.fxml,javafx.media,javafx.graphics
